--- a/Dream_shop/dream_shop/static/styles/cart.css
+++ b/Dream_shop/dream_shop/static/styles/cart.css
@@ -57,7 +57,11 @@
   font-size: 20px;
   text-align: center;
 }
-
+.cart-table .link-name {
+  text-decoration: none;
+  color: #315D68;
+  font-family:Arial, Helvetica, sans-serif;
+}
 /* Styles pour l'icône de suppression */
 .delete-button {
   font-size: 16px;
