--- a/Dream_shop/templates/includes/navbar.html
+++ b/Dream_shop/templates/includes/navbar.html
@@ -106,7 +106,7 @@
          ################################################################################################### -->
 
     <div class="nav-section">
-      <a href="#"><i class="fas fa-shopping-cart"></i><span id="cart-items">0</span></a>
+      <a href="{% url 'cart' %}"><i class="fas fa-shopping-cart"></i><span id="cart-items">{{ cart_count }}</span></a>
       <a href="#"><i class="fas fa-user"></i></a>
     </div>
   </nav>
