--- a/Dream_shop/dream_shop/static/styles/footer.css
+++ b/Dream_shop/dream_shop/static/styles/footer.css
@@ -60,6 +60,7 @@ footer {
   font-size: 1.4rem;
   font-weight: 500;
   margin-bottom: 15px;
+  margin-top: 10px;
   letter-spacing: 1px;
   font-family: 'Ananda', 'Cinzel Decorative', arial, cursive, sans-serif;
   color: #FFD700;
