--- a/Dream_shop/dream_shop/static/styles/product_details.css
+++ b/Dream_shop/dream_shop/static/styles/product_details.css
@@ -159,6 +159,7 @@
 }
 .product-info-detail .see-cart {
   border: none;
+  margin-bottom: 10px;
   padding: 15px 0;
   font-size: 1.5em;
   color: #fff;
