--- a/Dream_shop/templates/store/store.html
+++ b/Dream_shop/templates/store/store.html
@@ -28,4 +28,40 @@
     {% endfor %}
   </div>
 </div>
+
+
+
+<div class="pagination">
+  {% if products.has_other_pages %}
+  <div class="page-item">
+      {% if products.has_previous %}
+      <a class="page-link" href="?gender={{ request.GET.gender }}&category={{ request.GET.category }}&page={{ products.previous_page_number }}">Page précédente</a>
+      {% else %}
+          <span class="page-link disabled"></span>
+      {% endif %}
+  </div>
+
+  {% for num in products.paginator.page_range %}
+      {% if products.number == num %}
+          <div class="page-item active">
+              <span class="page-link">{{ num }}</span>
+          </div>
+      {% else %}
+          <div class="page-item">
+            <a class="page-link" href="?gender={{ request.GET.gender }}&category={{ request.GET.category }}&page={{ num }}">{{ num }}</a>
+          </div>
+      {% endif %}
+  {% endfor %}
+
+  <div class="page-item">
+      {% if products.has_next %}
+      <a class="page-link" href="?gender={{ request.GET.gender }}&category={{ request.GET.category }}&page={{ products.next_page_number }}">Page suivante</a>
+
+      {% else %}
+          <span class="page-link disabled"></span>
+      {% endif %}
+  </div>
+  {% endif %}
+</div>
+
 {% endblock %}
