--- a/Dream_shop/templates/includes/navbar.html
+++ b/Dream_shop/templates/includes/navbar.html
@@ -98,9 +98,10 @@
          ##########################################  SEARCH BAR  ###########################################
          ################################################################################################### -->
 
-    <div class="search-bar">
-      <input type="text" placeholder="Rechercher...">
-    </div>
+    <form class="search-bar" action="{% url 'search' %}" method="GET">
+      <input type="text" placeholder="Rechercher..." name="keyword">
+    </form>
+
     <!-- ###################################################################################################
          ###########################################  LOGOS BAR  ###########################################
          ################################################################################################### -->
