--- a/Dream_shop/dream_shop/static/styles/cart.css
+++ b/Dream_shop/dream_shop/static/styles/cart.css
@@ -1,4 +1,7 @@
-/* Styles pour le conteneur du panier */
+/*******************************************************
+**************** CART CONTAINER STYLES *****************
+*******************************************************/
+
 .cart-container {
   margin-top: 40px;
   background-color: rgba(255, 255, 255, 0.7); 
@@ -6,23 +9,17 @@
   display: flex;
   justify-content: space-between;
 }
-.scrollable-cart-items {
-  max-height: 60vh; /* Ajustez cette valeur en fonction de vos besoins */
-  overflow-y: auto;
-}
-.scrollable-cart-items {
-  max-height: 65vh;
-  overflow-y: auto;
-}
-.cart-table th {
-  position: sticky;
-  top: 0;
-  /* autres styles */
-  background-color: white; /* Ajoutez une couleur de fond pour éviter que le texte de la ligne ne soit visible lors du défilement */
-  z-index: 10; /* pour s'assurer que l'en-tête reste au-dessus du contenu du tableau lors du défilement */
+/* Styles for the cart container */
+.container-cart {
+  flex: 0 0 30%;
+  max-width: 30%;
 }
 
-/* Style pour le titre du panier */
+/*******************************************************
+*********************** CART TITLE *********************
+*******************************************************/
+
+/* Styles for cart title */
 .title-cart {
   text-align: center;
   margin-left: 12em;
@@ -33,13 +30,30 @@
   margin-top: 50px;
   margin-bottom: 80px;
 }
-/* Styles pour le tableau du panier */
+
+/*******************************************************
+*********************** CART ITEMS *********************
+*******************************************************/
+
+/* Styles for scrollable cart items */
+.scrollable-cart-items {
+  max-height: 65vh;
+  overflow-y: auto;
+}
+/* Styles for cart table */
 .cart-table {
   width: 100%;
   text-align: left;
   border-collapse: collapse;
 }
-/* Styles pour le contenu de table */
+/* Styles for cart table header */
+.cart-table th {
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 10;
+}
+/* Styles for the content of the table */
 .cart-table th, 
 .cart-table td {
   padding: 15px;
@@ -48,40 +62,28 @@
   border-bottom: 1px solid #ddd;
   color: #315D68;
 }
-/* Styles pour l'image du table */
-.cart-table img {
-  width: 150px;
-  height: auto;
-}
-/* Styles pour le texte dans table */
+/* Styles for the text in table */
 .cart-table tbody td {
   font-size: 20px;
   text-align: center;
 }
+/* Styles for the image in the table */
+.cart-table img {
+  width: 150px;
+  height: 160px;
+}
+/* Styles for the link name in the table */
 .cart-table .link-name {
   text-decoration: none;
   color: #315D68;
   font-family:Arial, Helvetica, sans-serif;
 }
-/* Styles pour l'icône de suppression */
-.delete-button {
-  font-size: 16px;
-  transition: all 0.2s ease-in-out;
-  background: none;
-  border: none;
-}
-/* Styles survol pour l'icône de suppression */
-.delete-button:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: #ffffff;
-  transform: scale(1.1);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  border-radius: 15px;
-  text-shadow: 0 0 5px pink, 0 0 10px rgb(220, 146, 159), 0 0 15px pink, 0 0 20px pink;
-  cursor: pointer;
-}
 
-/* Styles pour le résumé du panier */
+/*******************************************************
+********************** CART SUMMARY ********************
+*******************************************************/
+
+/* Styles for cart summary wrapper */
 .cart-wrapper {
   display: flex;
   justify-content: center;
@@ -89,16 +91,15 @@
   padding: 40px;
   margin-top: 25%;
 }
-/* Styles pour le conteneur du résumé du panier */
+/* Styles for cart summary container */
 .cart-summary {
   padding: 40px;
   border: 1px solid #ddd;
   border-radius: 10px;
   background-color: #f6f6f6;
-
   width: 80%;
 }
-/* Styles pour le titre du résumé du panier */
+/* Styles for cart summary title */
 .cart-summary h4 {
   margin-bottom: 20px;
   font-weight: 600;
@@ -106,7 +107,7 @@
   font-size: 1.5em;
   text-align: center;
 }
-/* Styles pour chaque élément du résumé du panier */
+/* Styles for each item in the cart summary */
 .cart-summary .summary-item {
   display: flex;
   justify-content: space-between;
@@ -115,34 +116,45 @@
   font-size: 1.1em;
   color: #333;
 }
-/* Styles pour le texte des éléments du résumé du panier */
+/* Styles for the text of the items in the cart summary */
 .cart-summary .summary-item p {
   margin: 0;
 }
-/* Styles pour le montant des éléments du résumé du panier */
+/* Styles for the amount of the items in the cart summary */
 .cart-summary .summary-item span {
   font-weight: 600;
   color: #315D68;
 }
-/* Styles pour l'élément total du résumé du panier */
+/* Styles for the total item of the cart summary */
 .cart-summary .summary-item.total {
   font-size: 1.3em;
   margin-top: 40px;
 }
-/* Styles pour les inputs dans le résumé du panier */
+/* Styles for inputs in the cart summary */
 .cart-summary input {
   height: 30px;
   font-size: 20px;
   width: 150px;
 }
-/* Styles pour les boutons de validation */
+
+/*******************************************************
+************************* BUTTONS **********************
+*******************************************************/
+
+/* Styles for validation buttons */
 .checkout-buttons {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
 }
-/* Styles pour les boutons de validation */
+/* Styles for quantity buttons */
+.quantity-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* Styles for validation buttons */
 .checkout-buttons button {
   padding: 10px 20px;
   margin-right: 20px;
@@ -154,20 +166,7 @@
   font-size: 1.1em;
   transition: background 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-/* Styles pour le survol des boutons de validation */
-.checkout-buttons button:hover {
-  background-color: #1a2e45;
-  color: #fff;
-}
-
-.empty-cart{
-  text-align: center;
-  color: #315D68;
-  font-size: 40px;
-  margin-top: 100px;
-  letter-spacing: 2px;
-  font-family: 'Ananda';
-}
+/* Styles for the cart button */
 .btn-cart {
   display: flex;
   justify-content: center;
@@ -187,7 +186,74 @@
   font-size: 1.1em;
   transition: background 0.2s ease-in-out, color 0.2s ease-in-out;
 }
+/* Styles for hovering over validation buttons */
+.checkout-buttons button:hover {
+  background-color: #1a2e45;
+  color: #fff;
+}
+/* Styles for the hovering cart button */
 .btn-cart:hover {
   background-color: #1a2e45;
   color: #fff;
+}
+/* Styles for delete button */
+.delete-button {
+  font-size: 16px;
+  transition: all 0.2s ease-in-out;
+  background: none;
+  border: none;
+}
+/* Hover styles for delete button */
+.delete-button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #ffffff;
+  transform: scale(1.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 15px;
+  text-shadow: 0 0 5px pink, 0 0 10px rgb(220, 146, 159), 0 0 15px pink, 0 0 20px pink;
+  cursor: pointer;
+}
+/* Styles for the first quantity + button */
+.button-cart1 {
+  text-decoration: none;
+}
+/* Styles for the first quantity - button */
+.button-cart1 button {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  line-height: 40px;
+  margin-right: 1px;
+}
+/* Styles for the second quantity + button */
+.button-cart2 button {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  line-height: 40px;
+  margin-left: 1px;
+}
+/* Styles for displaying the product quantity */
+.product-quantity {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+}
+
+/*******************************************************
+*********************** EMPTY CART *********************
+*******************************************************/
+
+/* Styles for the message when a cart is empty */
+.empty-cart{
+  text-align: center;
+  color: #315D68;
+  font-size: 40px;
+  margin-top: 100px;
+  letter-spacing: 2px;
+  font-family: 'Ananda';
 }
