--- a/Dream_shop/templates/includes/navbar.html
+++ b/Dream_shop/templates/includes/navbar.html
@@ -106,8 +106,10 @@
          ################################################################################################### -->
 
     <div class="nav-section">
+      <a href="{% url 'register' %}">S'inscrire</a>
+      <a href="{% url 'login' %}">Se connecter</a>
       <a href="#"><i class="fas fa-shopping-cart"></i><span id="cart-items">0</span></a>
-      <a href="#"><i class="fas fa-user"></i></a>
+      <!-- <a href="#"><i class="fas fa-user"></i></a> -->
     </div>
   </nav>
   <div id="dummy_nav" style="display:none;"></div>
