--- a/Dream_shop/static/styles/signup.css
+++ b/Dream_shop/static/styles/signup.css
@@ -85,13 +85,14 @@ nav.sticky-nav {
   transition: 0.5s;
   outline: none;
   opacity: 0.7;
+  margin-top: 20px;
 }
 /* Style du span dans inputBox */
 .container-signup .signup .inputBox span {
   position: absolute;
   margin-top: -43px;
   left: 2px;
-  padding: 14px 10px 14px 48px;
+  /*padding: 14px 10px 14px 48px; */
   pointer-events: none;
   font-size: 1em;
   font-weight: 300;
