add different templates for messages alert and register form

--- a/Dream_shop/templates/base.html
+++ b/Dream_shop/templates/base.html
@@ -20,9 +20,10 @@
     <link rel="stylesheet" href="{% static 'styles/store.css' %}">
     <link rel="stylesheet" href="{% static 'styles/product_details.css' %}">
     <link rel="stylesheet" href="{% static 'styles/cart.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/alerts.css' %}">
     <link rel="stylesheet" href="{% static 'styles/footer.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/signin.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/signup.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/login.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/register.css' %}">
     <link rel="stylesheet" href="{% static 'styles/password-forgot.css' %}">
     <link rel="stylesheet" href="{% static 'styles/index.css' %}">
     
