--- a/Dream_shop/templates/includes/navbar.html
+++ b/Dream_shop/templates/includes/navbar.html
@@ -107,8 +107,8 @@
          ################################################################################################### -->
 
     <div class="nav-section">
-      <a href="#">Se connecter</a>
-      <a href="#">S'inscrire</a>
+      <a href="{% url 'login' %}">Se connecter</a>
+      <a href="{% url 'register' %}">S'inscrire</a>
       <a href="{% url 'cart' %}" class="nav-cart"><i class="fas fa-shopping-cart"></i><span id="cart-items">{{ cart_count }}</span></a>
       <!-- <a href="#"><i class="fas fa-user"></i></a> -->
     </div>
