add login and logout functionnalities

--- a/Dream_shop/dream_shop/static/styles/navbar.css
+++ b/Dream_shop/dream_shop/static/styles/navbar.css
@@ -242,3 +242,19 @@
 #dummy_nav {
   height: 80px;
 }
+
+/* ###################################################################################################
+   ########################################  LOG CONNECTION  #########################################
+   ################################################################################################### */
+
+/* Style pour le titre quand c'est connecté */
+.title_open {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  margin-right: 30px;
+  font-family: 'Ananda';
+  letter-spacing: 2px;
+  color: #FFD700;
+}
