--- a/Dream_shop/templates/accounts/login.html
+++ b/Dream_shop/templates/accounts/login.html
@@ -1,31 +1,36 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<form>
-  <div class="background-signin"></div>
-  <div class="container-signin">
-    <!-- Formulaire de connexion -->
-    <div class="signin">
-      <h2>Se Connecter</h2>
-      <div class="inputBox">
-        <input type="text" required="required">
-        <i class="fa-solid fa-envelope"></i>
-        <span>Adresse e-mail</span>
-      </div>
-      <div class="inputBox">
-        <input type="password" required="required">
-        <i class="fa-solid fa-lock"></i>
-        <span>Mot de passe</span>
-      </div>
-      <div class="inputBox">
-        <a href="#" class="forgot-password">Mot de passe oublié?</a>
-      </div>
-      <div class="inputBox">
-        <input type="submit" value="Connexion">
-      </div>
-      <p>Non Enregistré ? <a href="{% url 'register' %}" class="create">Créer un compte</a></p>
+
+<div class="background-signin"></div>
+<div class="container-signin">
+  <!-- Formulaire de connexion -->
+  {% include 'includes/alerts.html' %}
+  <form action="{% url 'login' %}" method="POST">
+  
+  <div class="signin">
+    <h2>Se Connecter</h2>
+    {% csrf_token %}
+    <div class="inputBox">
+      <input type="email" required="required" name="email">
+      <i class="fa-solid fa-envelope"></i>
+      <span>Adresse e-mail</span>
     </div>
+    <div class="inputBox">
+      <input type="password" required="required" name="password">
+      <i class="fa-solid fa-lock"></i>
+      <span>Mot de passe</span>
+    </div>
+    <div class="inputBox">
+      <a href="#" class="forgot-password">Mot de passe oublié?</a>
+    </div>
+    <div class="inputBox">
+      <input type="submit" value="Connexion">
+    </div>
+    <p>Non Enregistré ? <a href="{% url 'register' %}" class="create">Créer un compte</a></p>
   </div>
-</form>
+  </form>
+</div>
+
 
 {% endblock %}
