--- a/Dream_shop/templates/includes/footer.html
+++ b/Dream_shop/templates/includes/footer.html
@@ -23,7 +23,7 @@
             
             <!-- BOUTTON ET LOGO CENTRAL -->
             <div class="footer-logo-newsletter">
-              <a href="#" class="newsletter-button">S'inscrire à la newsletter</a>
+              <a href="{% url 'register' %}" class="newsletter-button">S'inscrire à la newsletter</a>
               <div class="footer-logo">
                 <a href="{% url 'store' %}">
                   <img src="{% static 'styles/images/MA_BOUTIQUE_LOGO_Fond-Couleur.png' %}" alt="Logo boutique">
